[gd_scene load_steps=2 format=3 uid="uid://cvno4epl40k3u"]

[ext_resource type="Script" path="res://prefab/utils/EnemySpawner.gd" id="1_lb24f"]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource("1_lb24f")

[node name="SpawnPoints1" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="SpawnPoints1"]

[node name="Marker2D2" type="Marker2D" parent="SpawnPoints1"]

[node name="Marker2D3" type="Marker2D" parent="SpawnPoints1"]

[node name="Marker2D4" type="Marker2D" parent="SpawnPoints1"]

[node name="Marker2D5" type="Marker2D" parent="SpawnPoints1"]

[node name="SpawnPoints2" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="SpawnPoints2"]

[node name="Marker2D2" type="Marker2D" parent="SpawnPoints2"]

[node name="Marker2D3" type="Marker2D" parent="SpawnPoints2"]

[node name="Marker2D4" type="Marker2D" parent="SpawnPoints2"]

[node name="Marker2D5" type="Marker2D" parent="SpawnPoints2"]

[node name="Marker2D6" type="Marker2D" parent="SpawnPoints2"]
